# boardgame-sommelier

./: .env.example  .gitignore  Dockerfile  README.md  app.py  deploy.sh  pyproject.toml
dify_dsl_files/: Boardgame Sommelier Chatflow.yml  YouTube Search API Tool.yml
static/css/: style.css
static/js/: main.js
templates/: index.html
